--- a/index.html
+++ b/index.html
@@ -3,5 +3,14 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+
+<a id="liveagent_button_online_5735Y000000DApu" href="javascript://Chat" style="display: none;" onclick="liveagent.startChat('5735Y000000DApu')"><!-- Online Chat Content --></a>
+<div id="liveagent_button_offline_5735Y000000DApu" style="display: none;"><!-- Offline Chat Content --></div>
+<script type="text/javascript">
+    if (!window._laq) { window._laq = []; }
+    window._laq.push(function(){liveagent.showWhenOnline('5735Y000000DApu', document.getElementById('liveagent_button_online_5735Y000000DApu'));
+    liveagent.showWhenOffline('5735Y000000DApu', document.getElementById('liveagent_button_offline_5735Y000000DApu'));
+    });</script>
+    
 </body>
 </html>
