--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 
+<script type='text/javascript' src='https://c.la3-c2-ia4.salesforceliveagent.com/content/g/js/51.0/deployment.js'></script>
+<script type='text/javascript'>
+liveagent.init('https://d.la3-c2-ia4.salesforceliveagent.com/chat', '5725Y0000008yTY', '00D5Y0000024UbF');
+</script>
+
 <a id="liveagent_button_online_5735Y000000DApu" href="javascript://Chat" style="display: none;" onclick="liveagent.startChat('5735Y000000DApu')"><!-- Online Chat Content --></a>
 <div id="liveagent_button_offline_5735Y000000DApu" style="display: none;"><!-- Offline Chat Content --></div>
 <script type="text/javascript">
