--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1>Embedded Chat Test</h1>
 <p>I'm hosted with GitHub Pages.</p>
 
 <script type='text/javascript' src='https://c.la3-c2-ia4.salesforceliveagent.com/content/g/js/51.0/deployment.js'></script>
@@ -15,7 +15,8 @@ liveagent.init('https://d.la3-c2-ia4.salesforceliveagent.com/chat', '5725Y000000
     if (!window._laq) { window._laq = []; }
     window._laq.push(function(){liveagent.showWhenOnline('5735Y000000DApu', document.getElementById('liveagent_button_online_5735Y000000DApu'));
     liveagent.showWhenOffline('5735Y000000DApu', document.getElementById('liveagent_button_offline_5735Y000000DApu'));
-    });</script>
+    });
+</script>
     
 </body>
 </html>
