--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <script type='text/javascript' src='https://c.la3-c2-ia4.salesforceliveagent.com/content/g/js/51.0/deployment.js'></script>
+        <script type='text/javascript'>
+        liveagent.init('https://d.la3-c2-ia4.salesforceliveagent.com/chat', '5725Y0000008yTY', '00D5Y0000024UbF');
+        </script>
+    </head>
 <body>
-<h1>Embedded Chat Test</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <h1>Embedded Chat Test</h1>
+    <p>I'm hosted with GitHub Pages.</p>
 
-<script type='text/javascript' src='https://c.la3-c2-ia4.salesforceliveagent.com/content/g/js/51.0/deployment.js'></script>
-<script type='text/javascript'>
-liveagent.init('https://d.la3-c2-ia4.salesforceliveagent.com/chat', '5725Y0000008yTY', '00D5Y0000024UbF');
-</script>
+    <script type='text/javascript' src='https://c.la3-c2-ia4.salesforceliveagent.com/content/g/js/51.0/deployment.js'></script>
+    <script type='text/javascript'>
+    liveagent.init('https://d.la3-c2-ia4.salesforceliveagent.com/chat', '5725Y0000008yTY', '00D5Y0000024UbF');
+    </script>
 
-<a id="liveagent_button_online_5735Y000000DApu" href="javascript://Chat" style="display: none;" onclick="liveagent.startChat('5735Y000000DApu')"><!-- Online Chat Content --></a>
-<div id="liveagent_button_offline_5735Y000000DApu" style="display: none;"><!-- Offline Chat Content --></div>
-<script type="text/javascript">
-    if (!window._laq) { window._laq = []; }
-    window._laq.push(function(){liveagent.showWhenOnline('5735Y000000DApu', document.getElementById('liveagent_button_online_5735Y000000DApu'));
-    liveagent.showWhenOffline('5735Y000000DApu', document.getElementById('liveagent_button_offline_5735Y000000DApu'));
-    });
-</script>
-    
-</body>
+    <a id="liveagent_button_online_5735Y000000DApu" href="javascript://Chat" style="display: none;" onclick="liveagent.startChat('5735Y000000DApu')"><!-- Online Chat Content --></a>
+    <div id="liveagent_button_offline_5735Y000000DApu" style="display: none;"><!-- Offline Chat Content --></div>
+    <script type="text/javascript">
+        if (!window._laq) { window._laq = []; }
+        window._laq.push(function(){liveagent.showWhenOnline('5735Y000000DApu', document.getElementById('liveagent_button_online_5735Y000000DApu'));
+        liveagent.showWhenOffline('5735Y000000DApu', document.getElementById('liveagent_button_offline_5735Y000000DApu'));
+        });
+    </script>
+        
+    </body>
 </html>
