added script again

--- a/index.html
+++ b/index.html
@@ -15,14 +15,12 @@
     liveagent.init('https://d.la3-c2-ia4.salesforceliveagent.com/chat', '5725Y0000008yTY', '00D5Y0000024UbF');
     </script>
 
-    <a id="liveagent_button_online_5735Y000000DApu" href="javascript://Chat" style="display: none;" onclick="liveagent.startChat('5735Y000000DApu')">Online Chat Content</a>
-    <div id="liveagent_button_offline_5735Y000000DApu" style="display: none;">Offline Chat Content</div>
-    <script type="text/javascript">
+    <a id="liveagent_button_online_5735Y000000DApu" href="javascript://Chat" style="display: none;" onclick="liveagent.startChat('5735Y000000DApu')">Online Chat Content</a><div id="liveagent_button_offline_5735Y000000DApu" style="display: none;">Offline Chat Content</div><script type="text/javascript">
         if (!window._laq) { window._laq = []; }
         window._laq.push(function(){liveagent.showWhenOnline('5735Y000000DApu', document.getElementById('liveagent_button_online_5735Y000000DApu'));
         liveagent.showWhenOffline('5735Y000000DApu', document.getElementById('liveagent_button_offline_5735Y000000DApu'));
-        });
-    </script>
+        });</script>
+        
         
     </body>
 </html>
