--- a/gc-chat.html
+++ b/gc-chat.html
@@ -10,7 +10,28 @@
                                  document.head.appendChild(ys);  })
                                  (window, 'Genesys', 'https://apps.inindca.com/genesys-bootstrap/genesys.min.js',
                                   {    environment: 'dev',    deploymentId: 'c81cd282-4969-4c8f-acee-dfa0777a5ca0'
-                                  });</script>
+                                  });
+            </script>
+            <script>
+                var webSocket;
+                function establishWebsocketConnection() {
+                    if(!webSocket) {
+                        var webMessagingUrl = 'wss://webmessaging.inindca.com/v1?deploymentId=c81cd282-4969-4c8f-acee-dfa0777a5ca0'
+                        webSocket = new WebSocket(webMessagingUrl);
+
+                        if(webSocket.readyState === 'CONNECTING') {
+                            console.log('### Websocket is connecting: ', webSocket);
+                        }
+                    }
+
+                }
+
+                function registerWebSocketListeners() {
+
+                }
+
+                establishWebsocketConnection();
+            </script>
     </head>
     <body>
 
