updated polling logic

--- a/gc-chat.html
+++ b/gc-chat.html
@@ -36,16 +36,16 @@
 
                 function waitForReadyStateOpen(webSocket, callback) {
                     var pollInterval = setInterval(function(webSocket){
-                        console.log('### ReadyState is; ', readyStates[webSocket.readyState]);
-                        if(readyStates[webSocket.readyState] === 'OPEN') {
-                            if(callback) {
-                                callback();
+                        if(webSocket) {
+                            console.log('### ReadyState is; ', readyStates[webSocket.readyState]);
+                            if(readyStates[webSocket.readyState] === 'OPEN') {
+                                if(callback) {
+                                    callback();
+                                }
+                                clearInterval(pollInterval);
                             }
-                            clearInterval(pollInterval);
                         }
                     }, 10000);
-
-                    pollInterval();
                 }
 
                 function registerWebSocketListeners() {
