added token to message call

--- a/gc-chat.html
+++ b/gc-chat.html
@@ -76,8 +76,8 @@
                           message: {
                               type: 'Text',
                               text: 'Hello, this is a customer'
-
-                          }
+                          },
+                          token: UUID_TOKEN
                       }
                       webSocket.send(JSON.stringify(messageToSend));
 
