--- a/src/chat/chat-button-gcdevextrouting-dev-ed.html
+++ b/src/chat/chat-button-gcdevextrouting-dev-ed.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+        <!--<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"> -->
     </head>
     <body>
         <style type='text/css'>
