--- a/src/chat/chat-button-gcdevextrouting-dev-ed.html
+++ b/src/chat/chat-button-gcdevextrouting-dev-ed.html
@@ -4,7 +4,7 @@
         <!--<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"> -->
     </head>
     <body>
-        <style type='text/css'>
+       <!-- <style type='text/css'>
             .embeddedServiceHelpButton .helpButton .uiButton {
                 background-color: #005290;
                 font-family: "Arial", sans-serif;
@@ -12,7 +12,7 @@
             .embeddedServiceHelpButton .helpButton .uiButton:focus {
                 outline: 1px solid #005290;
             }
-        </style>
+        </style> -->
         
         <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
         <script type='text/javascript'>
